--- a/prj02/src/main/resources/application.yml
+++ b/prj02/src/main/resources/application.yml
@@ -15,3 +15,13 @@ security:
     header: Authorization
     secret: superCoding
     token-validity-in-seconds: 604800
+
+
+#aws:
+#  accessKeyId: your_access_key_id
+#  secretKey: your_secret_access_key
+#  region: your_aws_region
+#  s3:
+#    bucketName: your_bucket_name
+
+
