--- a/prj02/build.gradle
+++ b/prj02/build.gradle
@@ -32,8 +32,8 @@ dependencies {
 
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.mariadb.jdbc:mariadb-java-client:2.7.3'  // MariaDB JDBC 드라이버 의존성 추가
-//	runtimeOnly 'com.mysql:mysql-connector-j'
+//	implementation 'org.mariadb.jdbc:mariadb-java-client:2.7.3'  // MariaDB JDBC 드라이버 의존성 추가
+	runtimeOnly 'com.mysql:mysql-connector-j'
 	//   Spring Security & JWT
 	implementation 'org.springframework.boot:spring-boot-starter'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
