--- a/prj02/src/main/resources/application.yml
+++ b/prj02/src/main/resources/application.yml
@@ -1,26 +1,26 @@
-spring:
-  datasource:
-    username: backend2team
-    password: supercoding09
-    url: jdbc:mariadb://db-baeckend2team.cryqvukdhzno.ap-northeast-2.rds.amazonaws.com:3306/shop
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: true
-    database-platform: org.hibernate.dialect.MariaDBDialect
 #spring:
 #  datasource:
-#    username: root
-#    password: qwe456
-#    url: jdbc:mysql://localhost:3306/shop
-#    driver-class-name: com.mysql.cj.jdbc.Driver
-#  redis:
-#    host: localhost
-#    port: 6379
+#    username: backend2team
+#    password: supercoding09
+#    url: jdbc:mariadb://db-baeckend2team.cryqvukdhzno.ap-northeast-2.rds.amazonaws.com:3306/shop
 #  jpa:
-#    show-sql: true
 #    hibernate:
 #      ddl-auto: update
+#    show-sql: true
+#    database-platform: org.hibernate.dialect.MariaDBDialect
+spring:
+  datasource:
+    username: root
+    password: qwe456
+    url: jdbc:mysql://localhost:3306/shop
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  redis:
+    host: localhost
+    port: 6379
+  jpa:
+    show-sql: true
+    hibernate:
+      ddl-auto: update
   servlet:
     multipart:
       enabled: true
@@ -32,3 +32,14 @@ security:
     header: Authorization
     secret: superCoding
     token-validity-in-seconds: 604800
+
+  aws:
+    accessKeyId: AKIA2WSJ73WOI2ZIWIMW
+    secretKey: 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
+    region: ap-northeast-2
+    s3:
+      bucketName: project2team
+
+  logging:
+    level:
+      org.springframework.security: DEBUG
